--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,9 @@ body{
     padding: 15px 0px;
     border: none;
     font-size: 18px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     margin-bottom: 25px;
-    transition: border-color 0.3s ease-in-out;
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    transition: border-color 0.3s ease-in-out; */
 }
 #login-form input:not([type="submit"]){
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
