--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: var(--hotizontal-space);
+    padding: var(--horizontal-space);
 }
 .screen-header__title{
     font-size: 32px;
