--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -34,6 +34,7 @@
 .message-row{
     width: 100%;
     display: flex;
+    margin-bottom: 25px;
 }
 .message-row img{
     width: 50px;
@@ -54,11 +55,25 @@
     margin-right: 5px;
 }
 .message__info{
-    display: flex;
+    display: flex; /* message__info 가  flex 이기때문에 자식들에게 영향을 끼침*/
     align-items: flex-end;
 }
 .message__author,
 .message__time{
     opacity: 0.8;
     font-size: 14px;
+}
+
+.message-row--own{
+    justify-content: flex-end;
+}
+.message-row--own .message__bubble{
+    background-color: var(--yellow);
+    border-top-right-radius: 0px;
+    border-top-left-radius: 15px;
+    margin-right: 0;
+    margin-left: 5px;
+}
+.message-row--own .message__info{
+    flex-direction: row-reverse;  /* message__info 가  flex 이기때문에 순서를 반대로 바꾸기! */
 }
