--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -17,7 +17,9 @@
     top: 10px;
     z-index: 1;
 }
-
+/* .main-chat{
+    margin-top: 150px;
+} */
 .main-chat{
     margin-top: 120px;
     display: flex;
@@ -28,6 +30,7 @@
     color: white;
     background-color: #92a4b2;
     padding: 15px;
+    font-size: 14px;
     border-radius: 25px;
     margin-bottom: 25px;
 }
@@ -40,11 +43,15 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin-right: 15px;
+    margin-right: 10px;
 }
 .message__author{
     margin-bottom: 5px;
     display: block;
+}
+.message__info{
+    display: flex; /* message__info 가  flex 이기때문에 자식들에게 영향을 끼침*/
+    align-items: flex-end;
 }
 .message__bubble{
     background-color: white;
@@ -53,10 +60,6 @@
     border-radius: 15px;
     border-top-left-radius: 0px;
     margin-right: 5px;
-}
-.message__info{
-    display: flex; /* message__info 가  flex 이기때문에 자식들에게 영향을 끼침*/
-    align-items: flex-end;
 }
 .message__author,
 .message__time{
@@ -76,4 +79,58 @@
 }
 .message-row--own .message__info{
     flex-direction: row-reverse;  /* message__info 가  flex 이기때문에 순서를 반대로 바꾸기! */
+}
+
+.reply{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 25px;
+    box-sizing: border-box;
+    align-items: center;
+}
+.reply .reply__column:first-child{
+    width: 20%;
+}
+.reply .reply__column:last-child{
+    width: 90%;
+    position: relative;
+}
+.reply i {
+    opacity: 0.5;
+}
+.reply input{
+    padding: 14px;
+    width: 100%;
+    border: var(--main-border);
+    border-radius: 25px;
+    box-sizing: border-box;
+}
+.reply__column:last-child > i,
+.reply__column:last-child button{
+    position: absolute;
+    right: 3px;
+    top: 3px;
+}
+
+.reply__column:last-child > i {
+    right: 50px;
+    top: 15px;
+}
+.reply__column button{
+    background-color: var(--yellow);
+    border: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.reply__column button i{
+    opacity: 1;
+}
+.reply__column button:focus,
+.reply__column button:active {
+    outline: none;
 }
