--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -24,3 +24,25 @@
     justify-content: space-between;
     color:rgba(0, 0, 0, 0.5);
 }
+@keyframes hideSplashScreen {
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+#splach-screen{
+    background-color: var(--yellow);
+    position: absolute;
+    height: 100vh; /* 화면의 높이 100%*/
+    width: 100vW; /*화면의 넓이 100%*/
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 115px;
+    animation: hideSplashScreen 0.4s ease-in-out forwards;
+    animation-delay: 2s ;
+}
