--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,7 +1,8 @@
 #chat-screen{
     background-color: #abc1d1;
-    height: 11000vh; /* 스크롤링이 가능하도록!*/
+    height: 500vh; /* 스크롤링이 가능하도록!*/
 }
+
 #chat-screen .alt-header,
 #chat-screen .status-bar {
     top: 0;
@@ -17,14 +18,24 @@
     top: 10px;
     z-index: 1;
 }
-/* .main-chat{
-    margin-top: 150px;
-} */
+
+
+@keyframes fadeIn {
+    from{
+        transform:  translateY(30px);
+        opacity: 0;
+    }
+    to{
+        transform: none;
+        opacity: 1;
+    }   
+}
 .main-chat{
-    margin-top: 120px;
+    margin-top: 180px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeIn 0.8s linear;
 }
 .chat__timestamp{
     color: white;
@@ -91,9 +102,10 @@
     padding: 5px 25px;
     box-sizing: border-box;
     align-items: center;
+    transition: transform 0.3s ease-in-out;
 }
 .reply .reply__column:first-child{
-    width: 20%;
+    width: 10%;
 }
 .reply .reply__column:last-child{
     width: 90%;
@@ -108,6 +120,7 @@
     border: var(--main-border);
     border-radius: 25px;
     box-sizing: border-box;
+    transition: all 0.3s ease-in-out;
 }
 .reply__column:last-child > i,
 .reply__column:last-child button{
@@ -127,10 +140,30 @@
     height: 40px;
     border-radius: 50%;
 }
-.reply__column button i{
+.reply__column button i {
     opacity: 1;
 }
 .reply__column button:focus,
 .reply__column button:active {
     outline: none;
+}
+
+
+.reply .reply__column:first-child,
+.reply .fa-smile-wink,
+.reply button{
+    transition: opacity 0.3s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile-wink,
+.reply:focus-within button{
+    opacity: 0;
+}
+.reply input:focus{
+    width: 98vw;
+    transform: translateX(-13%) translateY(-80px);
+}
+.reply:focus-within{
+    transform: translateY(80px);
 }
