--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -9,10 +9,19 @@
     font-size: 32px;
     font-weight: 600;
 }
+.screen-header__icons{
+    position: relative;
+}
 .screen-header__icons span{
     margin-left: 25px;
 }
-
+.header-red-dot{
+    position: absolute;
+    color: tomato;
+    font-size: 40px;
+    bottom: 20px;
+    right: -5px;
+}
 
 
 @keyframes rotateCog{
