--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -28,6 +28,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 15px;
 }
 .open-post__title{
     font-weight: 600;
