setting list add

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,6 @@ body{
 .main-screen{
     padding: 0px var(--horizontal-space);
 }
+.main-screen_secound{
+    padding: 0px var(--horizontal-space);
+}
