--- a/css/screens/settings.css
+++ b/css/screens/settings.css
@@ -1,6 +1,6 @@
 .settings__setting{
     padding: 20px 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.02);
     font-size: 20px;
     display: flex;
     align-items: center;
@@ -13,4 +13,7 @@
 }
 .settings__setting-column:last-child{
     opacity: 0.5;
+}
+.settings__setting:nth-child(3){
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
